# XAInyPredictor

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.md
.github/workflows/: build.yml
docs/: Doxyfile
installer/windows/: XAInyPredictor.iss
src/XAInyPredictor/: __init__.py  app.py  main.py
src/XAInyPredictor/data/: current_best_formula.txt  formula.pkl  mock.csv  mock_processed.csv
src/XAInyPredictor/data/mock/: config.yml  example_data.csv  feature_order.txt  model.pkl
src/XAInyPredictor/data/neoag/: config.yml  example_data.csv  feature_order.txt  model.pkl  reference_data.csv
src/XAInyPredictor/data/rai/: config.yml  example_data.csv  feature_order.txt
src/XAInyPredictor/modules/: data_processing.py  model_registry.py  neoag_processing.py  rai.py  xai.py
src/XAInyPredictor/shinyapp/: __init__.py  data_exploration.py  data_input.py  prediction.py
src/XAInyPredictor/shinyapp/www/: data_template.tsv  data_template.xlsx  index.js  layout.css  style.css
test/: tests.py
